# arm-llm-core

./: .gitignore  Benchmarking.md  CMakeLists.txt  Notes.md  README.md  build.sh  check_tokens.py  export.py  gen_prompt.py
diagrams/: arch.drawio
include/: kvcache.h  math_engine.h  model_loader.h  tensor.h  tokenizer.h  transformer.h  utils.h
src/: main.cpp
